[package]
name = "nanolog"
version = "1.0.0"
edition = "2021"

[features]
heap-debug = []

[profile.release]
strip = "symbols"
opt-level = 3
debug = true
lto = false
codegen-units = 1
panic = "abort"

[profile.release-syms]
inherits = "release"
strip = false

[lib]
name = "nanolog"
path = "src/lib.rs"

[[bin]]
name = "nanolog"
path = "src/main.rs"
